# TensileAgent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agent/: .env.example  __init__.py  config.yaml  config_util.py  contract.py  doctor.py  http_vlm_stub.py  inference.py  interaction.py  iterative_agent.py  llm.py  llm_trace.py  parser.py  prompts.py  run.py  runner.py  sampling.py  schema.py  setup.py  web_api.py
agent/contracts/: tensile_vlm_v1.json  tensile_vlm_v2.json
docs/: LOCAL_MODEL_ACCEPTANCE.md  PROJECT_PLAN.md  PROJECT_WORKFLOW.md
docs/IMPLEMENTATIONS/: MVLLM2_TENSILE_VLM_V2_SYNC.md  agent-streamlit-workbench-ui.md  local-decision-model.md  model-agent-contract.md  (+2 more)
scripts/: run_local_model_ab.py
tests/: conftest.py  test_calibration.py  test_config_util.py  test_configure_processor_max_frames.py  test_contract.py  test_contract_acceptance.py  test_dataset_manager.py  test_fixtures.py  test_freeze_data_version.py  test_inference.py  test_interaction.py  test_iterative_agent.py  test_llm.py  test_llm_trace.py  test_local_model_ab.py  test_parser.py  test_preprocessing_adapter.py  test_prompts.py  test_prompts_meta.py  test_prompts_tensile.py  test_quality_check.py  test_reducer.js  test_run_cli.py  test_run_inference.py  test_runner.py  test_sampling.py  test_sampling_concrete.py  test_schema.py  test_server_adapter.py  test_server_proxy.py  test_subvideo_builder.py  test_training_sample_builder.py  test_v2_mvp.py  test_validate_no_oob.py  test_validation_common.py  test_web_api.py
web/: index.html  package-lock.json  package.json
web/src/: api.ts  (+2 more)
(+19 files in other folders)
