[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tensileagent"
version = "0.1.0"
description = "Material tensile fracture behavior video understanding with iterative agent."
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "opencv-python>=4.8",
    "openai>=1.0",
    "pydantic>=2.0",
    "requests>=2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "sse-starlette>=2.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = [
    "agent",
]

