# ── TensileAgent — 核心 Agent 推理系统依赖声明 ──
# 本文件为 TensileAgent/agent/ 目录下的核心推理系统提供依赖声明。
# mVllm_2/（微调流水线）有自己独立的依赖管理，不在此文件涵盖范围内。

[project]
name = "tensile-agent"
version = "0.1.0"
description = "材料拉伸断裂视频智能分析系统 — TensileAgent 核心推理系统"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "openai>=1.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.9,<1.0",
    "pyyaml>=6.0",
    "requests>=2.0",
    "sse-starlette>=1.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
